fixed appearance of buttons on narrow width, worked on 520px width transition problem succeeding in fixing on Chrome but not FF

--- a/JavaScript_practice/Addex.css
+++ b/JavaScript_practice/Addex.css
@@ -19,7 +19,6 @@ html{
 }
 .user-notify{
 	color: #ff00ff;
-	/*background-color: #00ff00;*/
 	height: 1.4em;
 	margin-top: 0.7em;
 	font-size: 0.9em;
@@ -54,32 +53,32 @@ html{
 	line-height: 1.4;
 }
 input[type='radio']:after {
-        width: 0.9em;
-        height: 0.9em;
-        border-radius: 1em;
-        top: -0.3em;
-        left: -0.35em;
-        position: relative;
-        background-color: #ffffff;
-        content: '';
-        display: inline-block;
-        visibility: visible;
-        border: 2px solid white;
-    }
+	width: 0.9em;
+	height: 0.9em;
+	border-radius: 1em;
+	top: -0.3em;
+	left: -0.35em;
+	position: relative;
+	background-color: #ffffff;
+	content: '';
+	display: inline-block;
+	visibility: visible;
+	border: 2px solid white;
+}
 
-    input[type='radio']:checked:after {
-        width: 0.9em;
-        height: 0.9em;
-        border-radius: 1em;
-        top: -0.3em;
-        left: -0.35em;
-        position: relative;
-        background-color: #660033;
-        content: '';
-        display: inline-block;
-        visibility: visible;
-        border: 2px solid white;
-    }
+input[type='radio']:checked:after {
+	width: 0.9em;
+	height: 0.9em;
+	border-radius: 1em;
+	top: -0.3em;
+	left: -0.35em;
+	position: relative;
+	background-color: #660033;
+	content: '';
+	display: inline-block;
+	visibility: visible;
+	border: 2px solid white;
+}
 .number-box{
 	/*margin-top: 0.6em;*/
 	display: inline-block;
@@ -107,6 +106,11 @@ input[type='radio']:after {
 }
 .button-box{
     margin-top: 1em;
+    text-align: center;
+}
+.button-row{
+   
+    display: inline-block;
 }
 .btn-holder{
 	margin-left: 0.2em;
@@ -120,6 +124,7 @@ input[type='radio']:after {
 	height: 1.5em;
 	font-size: 1.0em;
 	border: none;
+    padding-bottom: 0.1em;
 }
 .score-box{
     margin-top: 0.7em;
@@ -140,6 +145,16 @@ input[type='radio']:after {
 	 } 
 }
 
+@media (max-width: 526px){
+	 .button-row{
+		 margin-top: 0.5em;
+	}
+	 .btn{
+		width: 6.5em;
+		height: 1.8em;
+   }
+}
+
 @media (min-width: 280px) {
 	input[type='radio']:after {
         width: 0.6em;
@@ -158,6 +173,7 @@ input[type='radio']:after {
         left: -0.04em;
         border: 1px solid white;
     }
+    
 }
 @media (min-width: 768px) {
 	input[type='radio']:after {
